# LuminaNotes

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/PULL_REQUEST_TEMPLATE/: swarm_sync.md
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  release.yml  release_python.yml  swarm-index.yml
Lumina/: MasterIndex.md
Lumina/Beatbound - SNESynth Dev Project/: ChangeLog.md  metadata.json
Lumina/Keeper Tracker - Dynamic Project Dashboard/: ChangeLog.md  metadata.json
beatbound/docs/: beatbound_roadmap.md
beatbound/loops/: talkbox_presets.json
beatbound/playground/: index.html  style.css  talkbox.js
bestway/CLI/: ingest.py
bestway/schema/: bestway_schema.json
bestway/templates/: recipe_template.md  solar_dehydrator.md
data/: README.md
data/bestway_recipes/: solar_dehydrator.json
data/creative_pack_v0.1/: README.md
data/echoes_v0.5/: README.md
data/echoes_v0.6/: PLACEHOLDERS.txt
docs/: beatbound_overview.md  bestway_overview.md  echoes_overview.md  governance_charter.md  index.md  manifest_changelog.md  omniintent_overview.md  roadmap.md
notebooks/: ubi_ai_dividend.ipynb
scripts/: sync_helper.py
swarm_sync/: 20250727_main_manifest.json  swarm_digest.md
tests/: test_bestway_cli.py  test_macro_recorder.py  test_spec_schema.py  test_tokenizer_spec.py  test_ubi_dividend.py  tokenizer_spec.json
tools/: macro_to_markdown.py  swarm_sync.py
(+22 files in other folders)
